dark mode fix mobile + centered skill cards

--- a/styles/scss/imports/_global.scss
+++ b/styles/scss/imports/_global.scss
@@ -10,8 +10,8 @@ body {
 
 body {
   position: relative;
-  background: $color1;
-  background: radial-gradient(circle, $color2 0%, $color1 100%);
+  background: $color1 !important;
+  background: radial-gradient(circle, $color2 0%, $color1 100%) !important;
   font-family: 'Circular', sans-serif;
   font-size: 16px;
   font-weight: 300; //300/500/900
