--- a/styles/scss/imports/_skills.scss
+++ b/styles/scss/imports/_skills.scss
@@ -32,7 +32,7 @@
     padding: 25px 0;
 
     @media (min-width: 992px) {
-      padding: 25px 40px 25px 0;
+      padding: 25px;
     }
 
     @media (min-width: 1920px) {
